# DTSynth

./: .gitignore  README.md  pyproject.toml
src/dtsynth/: dtb_parser.py
