[tool.poetry]
name = "dtsynth"
version = "0.1.0"
description = "DTB逆向还原与跨版本移植工具（RK35xx优先）"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
homepage = "https://github.com/yourusername/dtsynth"
repository = "https://github.com/yourusername/dtsynth"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pylibfdt = "^0.7.0"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.9.1"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
extend-ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true